[package]
name = "synco"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = { git = "https://github.com/chris-morgan/anymap.git" } #"0.12"

[dev-dependencies]
specs = "0.16"
criterion = "0.3"

[[bench]]
name = "basic"
harness = false
